2005-09-13  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkdialog.c: Reverted previous version. Shouldn't destroy in a block.

2005-09-12  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkdialog.c: Gtk::Dialog.run{} destroy the dialog if a block is given. 
	Pointed out by Paul van Tilburg.
	* src/rbgdkevent.c: Gdk::Event*.new which can accept an event_type can omit
	the parameter. Gdk::EventScroll, Gdk::EventMotion, Gdk::EventExpose, 
	Gdk::EventVisibility, Gdk::EventFocusChange, Gdk::EventConfigure, 
	Gdk::EventProperty, Gdk::EventClient, Gdk::EventNoExpose, Gdk::EventWindowState,
	Gdk::EventSetting, Gdk::EventOwnerChange.
	Pointed out by Paul van Tilburg.
	* src/rbgtkfilechooser.c: Checks gtk+ version for GtkFileChooserConfirmation. 
	* src/rbgtkuimanager.c: [] added as an alias of Gtk::UIManager#get_widget.
	Pointed out by Paul van Tilburg.
	Gtk::UIManager#get_widget raises an ArgumentError when the widget isn't found.
	Pointed out by Paul van Tilburg.
	* sample/misc/uimanager.rb, uimanager2.rb: ditto.

2005-09-06  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgdkgc.c (gdkgc_copy): Require destination object.

2005-08-24  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgdkdraw.c (gdkdraw_draw_trapezoids): Fix wrong argument
	check.
	
	* src/rbgdkdisplay.c: Add getters.

2005-08-20  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkimage.c (image_initialize): Fix a problem when first parameter is a String
	and Second paramter is a Gtk::IconSize, not nil.
	* src/rbgdkdisplay.c (gdkdisplay_s_open): Fix a problem if gdk_display_open returns NULL. 
	Reported by Guillaume Cottenceau.

2005-08-18  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgdkdisplay.c: Fix segfault when Gdk::Display#close is called.
	Reported by Bram Senders.
	And raise a RuntimeError when Gdk::Display#open is failed.
	Gdk::Display#default: ditto. 

2005-07-30  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgdkatom.c: Fix compiling warnings on amd64. 
	* sample/testgtk/spinbutton.rb: Fix a typo.