@@ -1,3 +1,8 @@
+2005-09-14  Kouhei Sutou  <kou@cozmixng.org>
+
+	* src/rbgtktreeviewcolumn.c (Init_gtk_treeviewcolumn): Fix wrong
+	number of argument.
+
 2005-09-13  Masao Mutoh  <mutoh@highway.ne.jp>
 
 	* src/rbgtkdialog.c: Reverted previous version. Shouldn't destroy in a block.
